# AkivCraft

./: .gitignore  Cargo.toml  Makefile  README.md  build.gradle.kts  package-lock.json  package.json  settings.gradle.kts
docs/: architecture.md  external-launcher.md  mod-api.md
example-mods/biome-sample/: index.js  mod.json
example-mods/block-events/: index.js  mod.json
example-mods/debug-chat/: index.js  mod.json
example-mods/fps-hud/: index.js  mod.json  package.json
example-mods/item-sample/: index.js  mod.json  package.json
example-mods/item-sample/assets/items/: akiv_gem.json  akiv_pickaxe.json  akiv_sword.json  grappling_hook.json
example-mods/item-sample/assets/lang/: en_us.json  ja_jp.json
example-mods/minimap/: index.js  mod.json  package.json
example-mods/registry-sample/: index.js  mod.json
launcher-core/: Cargo.toml
launcher-core/src/: lib.rs
launcher-gpui/: Cargo.toml
launcher-gpui/src/: main.rs
loader-java/: build.gradle.kts
node-runtime/: package.json
node-runtime/src/: api.ts  binary-ipc-server.ts  index.ts  ipc-server.ts  player-action-client.ts  runtime.ts  state-client.ts  stdio-ipc-transport.ts  udp-bitmap-sender.ts  unix-socket-client.ts
node-runtime/types/: mod.d.ts
protocol/: messages.md
scripts/: package-external.mjs
shaderpacks/Complementary/shaders/: block.properties  dimension.properties  entity.properties  item.properties  shaders.properties
shaderpacks/Complementary/shaders/lang/: en_US.lang
shaderpacks/Complementary/shaders/lib/: settings.glsl
shaderpacks/Complementary/shaders/program/: final.glsl  (+35 more)
(+338 files in other folders)
